# learn-machine-learning

./: .gitignore
auto-alpha-gradient-descent/: Cargo.toml
auto-alpha-gradient-descent/src/: main.rs
gradient-descent-impl/: Cargo.toml
gradient-descent-impl/src/: main.rs
lunarlander/: learn.py  model.py  play.py  requirements.txt
well_bouncer/: README.md  game_factory.py  learn.py  model.py  play.py  pygame_well_bouncer_player.py  requirements.txt  selfplay.mov  well_bouncer_game.py
well_bouncer/model/: logistic-regression-1000-90.model  mlp-classifier-1000-50.model  mlp-classifier-1000-90.model  mlp-classifier-1000-95.model  mlp-classifier-bounces-1000-90.model  mlp-classifier-height-1000-90.model
